* switch to MaxRAMPercentage java option so we doesn't run anymore in OOM